fix spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -31,6 +31,10 @@ h2 {
   font-family: georgia;
 }
 
+p {
+  line-height: 1.5;
+}
+
 button {
   padding: 0.5rem 0.75rem;
   background: $highlight;
@@ -41,6 +45,15 @@ button {
   font-weight: bold;
   letter-spacing: 0.1rem;
   font-family: "courier new";
+}
+
+hr {
+  width: 60%;
+  border: none;
+  height: 5px;
+  background-color: $background1;
+  margin: 0.75rem auto 0rem;
+  border-radius: 5px;
 }
 
 .content-container {
@@ -54,7 +67,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 2rem 0rem;
+  padding: 1.5rem 0rem;
 
   nav {
     width: 90%;
@@ -133,18 +146,8 @@ header {
       text-align: center;
     }
 
-    hr {
-      width: 60%;
-      border: none;
-      height: 5px;
-      background-color: $background1;
-      margin: 0.75rem auto 0rem;
-      border-radius: 5px;
-    }
-
     p {
-      margin-top: 1.25rem;
-      line-height: 1.5;
+      margin-top: 1rem;
       text-align: center;
     }
   }
